package com.touhou.observer;

public interface PowerUpObserver {
    void onPowerUpActivated(PowerUpEvent event);
}
